--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="css/micl.css">
     <link rel="stylesheet" href="css/hhri.css">
   </head>
-  <body class="micl-window light">
+  <body class="micl-window dark">
     <main class="micl-body">
       <section class="micl-pane">
         <header class="micl-appbar micl-appbar-large">
