--- a/index.html
+++ b/index.html
@@ -19,6 +19,13 @@
       <section class="micl-pane">
         <header class="micl-appbar micl-appbar-large">
         </header>
+        <div>
+          <img alt="Mental Health and Human Rights Info" src="img/logo.svg">
+          <div>
+            <p>Search through our thematic pages and the database with guidelines, manuals, publications and more.</p>
+            <p>We are a reliable source of information dealing with mental health in war and conflict areas.</p>
+          </div>
+        </div>
       </section>
     </main>
   </body>
